# EANation

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.standalone.yml  env.standalone  rustfmt.toml
.cargo/: config.toml
data/: .PLEASE_DO_NOT_USE_THESE_CERTS_BUT_CREATE_NEW_ONES  priv.pem  pub.pem
docker/: entrypoint.sh
scripts/: generateCertificate.sh  scanBinary.py  scanMemory.py
src/: client_connection.rs  config.rs  crypto.rs  listener.rs  main.rs  mordorwide_errors.rs  packet.rs  plasma_errors.rs  plasma_handle.rs  service.rs  sharedstate.rs
src/handler/: mod.rs
src/handler/fesl/: hdl_acct_getcountrylist.rs  hdl_acct_nuaddaccount.rs  hdl_acct_nuaddpersona.rs  hdl_acct_nuentitlegame.rs  hdl_acct_nugetpersona.rs  hdl_acct_nugettos.rs  hdl_acct_nulogin.rs  hdl_acct_nuloginpersona.rs  hdl_acct_nups3login.rs  hdl_acct_nusuggestpersonas.rs  hdl_acct_nuxbl360login.rs  hdl_asso_addassociations.rs  hdl_asso_getassociations.rs  hdl_fsys_getpingsites.rs  hdl_fsys_goodbye.rs  hdl_fsys_hello.rs  hdl_fsys_memcheck.rs  hdl_fsys_ping.rs  hdl_pres_setpresencestatus.rs  hdl_rank_gettopnandme.rs  mod.rs  utils_memcheck.rs  utils_ping.rs
src/handler/theater/: hdl_cgam.rs  hdl_conn.rs  hdl_echo.rs  hdl_ecnl.rs  hdl_egam.rs  hdl_egrs.rs  hdl_glst.rs  hdl_llst.rs  hdl_pent.rs  hdl_ping.rs  hdl_plvt.rs  hdl_rgam.rs  hdl_ubra.rs  hdl_ugam.rs  hdl_user.rs  mod.rs  utils_ping.rs
src/orm/: mod.rs
src/orm/model/: account.rs  ban.rs  config.rs  game.rs  mod.rs  participant.rs  persona.rs  session.rs
src/utils/: config_values.rs  mod.rs  psn.rs  stun_turn.rs
src/utils/auth/: hashing.rs  jwt.rs  mod.rs  user.rs
src/utils/data_validation/: email.rs  game_name.rs  mod.rs  password.rs  persona.rs
