[package]
name = "MordorWide"
version = "0.1.0"
edition = "2024"

[dependencies]
openssl-sys = "0.9.112"
openssl = "0.10.76"
tokio = { version = "1.51.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["full"] }
tokio-openssl = "0.6.5"
tokio-stream = "0.1.18"
async-trait = "0.1.89"
sea-orm = { version = "1.1.19", features = [ "sqlx-sqlite", "sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono", "with-uuid" ] }
serde = "1.0.228"
serde_json = "1.0.149"
rand = "0.10.1"
uuid = { version = "1.23.0", features = ["v4"] }
bytes = "1.11.1"
threadpool = "1.8.1"
chrono = "0.4.44"
indexmap = { version = "2.13.1", features = ["serde"] }
dashmap = "6.1.0"
argon2 = "0.5.3"
jsonwebtoken = "10.3.0"
sha256 = "1.6.0"
dotenvy = "0.15.7"
base64 = "0.22.1"
reqwest = { version = "0.13.2", features = ["json"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
